@@ -4,6 +4,8 @@ Released 2.4.22 2015-10-xx
 Changes since 2.4.21:
 
 Lib/
+* LDIFParser now also accepts value-spec without a space
+  after the colon.
 
 ----------------------------------------------------------------
 Released 2.4.21 2015-09-25
@@ -1202,4 +1204,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.357 2015/09/30 17:15:53 stroeder Exp $
+$Id: CHANGES,v 1.358 2015/09/30 17:17:28 stroeder Exp $
